force-app/main/default/objects/XactlyExpress__XCPayoutDetail__c/XactlyExpress__XCPayoutDetail__c.object-meta.xml
<CustomObject>
    <label>XCPayoutDetail</label>
    <nameField>
        <label>XCPayoutDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCPayoutDetail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>