force-app/main/default/objects/XactlyExpress__XCPayoutDetail__c/fields/XactlyExpress__PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PaidAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PaidAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>