force-app/main/default/objects/XactlyExpress__XCPayoutDetail__c/fields/XactlyExpress__PayoutResultID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PayoutResultID__c</fullName>
    <label>PayoutResultID</label>
    <referenceTo>XactlyExpress__XCPayoutResult__c</referenceTo>
    <relationshipLabel>XCPayoutDetail</relationshipLabel>
    <relationshipName>XCPayoutDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>